# QuantilyxDoc

./: CMakeLists.txt  INSTALL.md  README.md  build.sh
.devcontainer/: devcontainer.json
src/: main.cpp
src/annotations/: AnnotationManager.cpp  AnnotationManager.h
src/core/: Application.cpp  CrashHandler.cpp  Document,h  MetadataDatabase.cpp  ProfileManager.cpp  ProfileManager.h  ProgressiveRenderer.cpp  ProgressiveRenderer.h
src/editing/: AnnotationEditor.cpp  AnnotationEditor.h  FormFiller.cpp  FormFiller.h
src/formats/cad/: DwgDocument.cpp  DwgDocument.h  DxfDocument.cpp  DxfDocument.h
src/formats/chm/: ChmDocument.cpp  ChmDocument.h
src/formats/comic/: CbrDocument.cpp  CbrDocument.h  CbzDocument.cpp  CbzDocument.h  ComicPage.cpp  ComicPage.h
src/formats/djvu/: DjvuDocument.cpp  DjvuDocument.h
src/formats/epub/: EpubDocument.cpp  EpubDocument.h  EpubPage.cpp  EpubPage.h
src/formats/fictionbook/: Fb2Document.cpp  Fb2Document.h
src/formats/image/: ImageDocument.cpp  ImageDocument.h
src/formats/markdown/: MdDocument.cpp  MdDocument.h
src/formats/mobi/: MobiDocument.cpp  MobiDocument.h
src/formats/office/: DocxDocument.cpp  DocxDocument.h  OdtDocument.cpp  OdtDocument.h
src/formats/pdf/: PdfAnnotation.cpp  PdfAnnotation.h  PdfDocument.cpp  PdfDocument.h  PdfFormField.cpp  PdfFormField.h  PdfPage.cpp  PdfPage.h
src/formats/postscript/: EpsDocument.cpp  EpsDocument.h  PsDocument.cpp  PsDocument.h  PsPage.cpp  PsPage.h
src/formats/xps/: XpsDocument.cpp  XpsDocument.h
src/ocr/: OcrEngine.cpp  OcrEngine.h  OcrPage.cpp  OcrPage.h
src/search/: FullTextIndex.cpp  FullTextIndex.h
src/security/: ChecksumVerifier.cpp  ChecksumVerifier.h  DigitalSignatureChecker.cpp  DigitalSignatureChecker.h  MalwareScanner.cpp  MalwareScanner.h
src/ui/: AboutDialog.cpp  AboutDialog.h  CommandPalette.cpp  CommandPalette.h  ContentsWidget.cpp  ContentsWidget.h  DocumentView.cpp  MainWindow.cpp  MainWindow.h  PreferencesDialog.cpp  PreferencesDialog.h  QuickActionsPanel.cpp  QuickActionsPanel.h  SplashScreen.cpp  SplashScreen.h  StatusBar.cpp  StatusBar.h  Toolbar.cpp  Toolbar.h
src/utils/: Version.h.in
